chore: roadmap validator draft 2

--- a/.github/workflows/roadmap-validator.yml
+++ b/.github/workflows/roadmap-validator.yml
@@ -1,26 +1,34 @@
 name: Roadmap Validator
 
 on:
-  pull_request:
-    paths:
-      - 'content/qa/**'
-      - 'tools/roadmap_validator/validate.py'
-      - 'tools/roadmap_validator/**'
-      - '.github/workflows/roadmap-validator.yml'
+  workflow_dispatch:
+    inputs:
+      paths:
+        description: 'Space-separated paths or directories to validate'
+        required: false
+        default: ''
   push:
     branches:
       - main
+      - chore/roadmap-validator
     paths:
+      - 'content/acz/**'
+      - 'content/dst/**'
       - 'content/qa/**'
-      - 'tools/roadmap_validator/validate.py'
+      - 'content/nes/**'
+      - 'content/nim/**'
+      - 'content/p2p/**'
+      - 'content/rfc/**'
+      - 'content/sc/**'
+      - 'content/sec/**'
+      - 'content/tke/**'
+      - 'content/web/**'
       - 'tools/roadmap_validator/**'
       - '.github/workflows/roadmap-validator.yml'
 
 jobs:
   validate:
     runs-on: ubuntu-latest
-    env:
-      TARGET_DIRECTORIES: "content/qa"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,33 +43,28 @@ jobs:
       - name: Install dependencies
         run: pip install --disable-pip-version-check --no-cache-dir pyyaml
 
+      - name: Detect changed markdown files
+        if: ${{ github.event_name != 'workflow_dispatch' }}
+        id: changed-files
+        uses: tj-actions/changed-files@v42
+        with:
+          files: |
+            **/*.md
+
       - name: Run roadmap validator
         run: |
           set -eo pipefail
-          BASE_SHA="${{ github.event.pull_request.base.sha || github.event.before }}"
-          if [ -z "$BASE_SHA" ] || [ "$BASE_SHA" = "0000000000000000000000000000000000000000" ]; then
-            CHANGED_FILES=$(git ls-files)
+
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            TARGETS="${{ github.event.inputs.paths }}"
           else
-            CHANGED_FILES=$(git diff --name-only --diff-filter=ACMRT "$BASE_SHA" "$GITHUB_SHA")
+            TARGETS="${{ steps.changed-files.outputs.all_changed_files }}"
+            if [ -z "$TARGETS" ]; then
+              echo "No roadmap markdown changes detected."
+              exit 0
+            fi
           fi
 
-          TARGET_FILES=""
-          for file in $CHANGED_FILES; do
-            for dir in $TARGET_DIRECTORIES; do
-              case "$file" in
-                $dir/*.md)
-                  if [ -f "$file" ]; then
-                    TARGET_FILES="$TARGET_FILES $file"
-                  fi
-                  ;;
-              esac
-            done
-          done
-
-          if [ -z "$TARGET_FILES" ]; then
-            echo "No roadmap markdown changes detected."
-            exit 0
-          fi
-
-          echo "Validating files:$TARGET_FILES"
-          python tools/roadmap_validator/validate.py $TARGET_FILES
+          echo "Validating targets:"
+          printf '%s\n' $TARGETS
+          python tools/roadmap_validator/validate.py $TARGETS
