--- a/.github/workflows/roadmap-validator.yml
+++ b/.github/workflows/roadmap-validator.yml
@@ -9,7 +9,7 @@ on:
         default: ''
   push:
     branches:
-      - main
+      - master
     paths:
       - 'content/dst/**'
       - 'content/qa/**'
