chore: 30 10 unit updates

--- a/.github/workflows/roadmap-validator.yml
+++ b/.github/workflows/roadmap-validator.yml
@@ -18,6 +18,7 @@ on:
       - 'content/rfc/**'
       - 'content/sc/**'
       - 'content/sec/**'
+      - 'content/bi/**'
       - 'content/web/**'
       - 'tools/roadmap_validator/**'
       - '.github/workflows/roadmap-validator.yml'
